--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -45,9 +45,9 @@
     font-weight: 500;
 }
 
-.form-control {
+/* .form-control {
     padding: 10px;
-}
+} */
 
 .form-control:focus {
     border-color: #ffc0cb;
