--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -44,9 +44,9 @@
     font-weight: 500;
 }
 
-.form-control {
+/* .form-control {
     padding: 10px;
-}
+} */
 
 .form-control:focus {
     border-color: #ffc0cb;
