--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -1,3 +1,21 @@
+body,
+html {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.footer {
+    margin-top: auto !important;
+}
+
 .footer__social {
     text-align: left;
     margin-bottom: 15px;
@@ -28,5 +46,9 @@
     color: #666;
     font-size: 14px;
     transition: all 0.2s ease;
+}
+
+.footer {
+    margin-top: auto!important;
 }
 
