--- a/frontend/src/styles/AddProduct.css
+++ b/frontend/src/styles/AddProduct.css
@@ -3,24 +3,24 @@ h2 {
     color: #333;
 }
 
-.form-group {
+.add-product-container.form-group {
     margin-bottom: 15px;
 }
 
-.form-control {
+.add-product-container .form-control {
     height: 40px;
     font-size: 14px;
 }
 
-.form-control-file {
+.add-product-container .form-control-file {
     font-size: 14px;
 }
 
-button[type="submit"] {
+.add-product-container button[type="submit"] {
     color: white;
     font-weight: bold;
     font-size: 16px;
-    padding: 12px;
+    padding: 12px!important;
     border-radius: 4px;
     border: none;
     transition: background-color 0.3s ease;
