--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -52,3 +52,14 @@ html {
     margin-top: auto!important;
 }
 
+@media (max-width: 250px) {
+    .footer__social-icons {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer__social-icons li {
+        width: 50%;
+        height: 50px;
+    }
+}
