--- a/frontend/src/styles/Productlist.css
+++ b/frontend/src/styles/Productlist.css
@@ -1,4 +1,4 @@
-.product__list_box {
+/* .product__list_box {
     padding: 5px;
     text-align: center;
 }
@@ -59,4 +59,4 @@
     .product__item-inner {
         padding: 8px;
     }
-}
+} */
