--- a/frontend/src/styles/ProductPage.css
+++ b/frontend/src/styles/ProductPage.css
@@ -213,3 +213,139 @@
     color: #FF6F91;
 }
 
+
+
+.products__container {
+    display: grid;
+    gap: 8px !important;
+    width: 100%;
+    padding: 15px;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+@media (min-width: 1270px) {
+    .products__container {
+        grid-template-columns: repeat(5, 1fr);
+        gap: 20px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1269px) {
+    .products__container {
+        grid-template-columns: repeat(5, 1fr);
+        gap: 15px;
+    }
+}
+
+/* Medium devices (768px - 991px) */
+@media (min-width: 768px) and (max-width: 991px) {
+    .products__container {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 15px;
+    }
+}
+
+/* Small devices (<768px) */
+@media (max-width: 767px) {
+    .products__container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+        padding: 10px;
+    }
+}
+
+/* Styles for minimal screen size */
+@media (max-width: 375px) {
+    .products__container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 8px;
+        padding: 8px;
+    }
+}
+
+/* Container style */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.product__item {
+    width: 100%;
+    min-width: 0;
+}
+
+.product__img {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1;
+}
+
+.product__img img {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+.product__name {
+    word-wrap: break-word;
+}
+
+.product__price {
+    flex-wrap: wrap;
+}
+
+@media (max-width: 576px) {
+    .product__item {
+        padding: 8px;
+    }
+
+    .product__name {
+        font-size: 12px !important;
+    }
+
+    .product__price__reduce {
+        font-size: 12px !important;
+    }
+
+    .product__price__increase {
+        font-size: 14px !important;
+    }
+}
+
+
+/* loading thoi gian chờ */
+.loading-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+}
+
+.loading-spinner {
+    width: 50px;
+    height: 50px;
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #FF6F91;
+    border-radius: 50%;
+    animation: spin 10s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
