--- a/frontend/src/components/Product/Cart.css
+++ b/frontend/src/components/Product/Cart.css
@@ -131,3 +131,59 @@
 .item-details_name{
     max-width: auto!important;
 }
+
+.cart-empty-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+    text-align: center;
+}
+
+.cart-empty-image {
+    max-width: 300px;
+    margin-bottom: 20px;
+}
+
+.cart-empty-text {
+    font-size: 24px;
+    /* Tăng kích thước chữ */
+    font-weight: bold;
+    color: #5e5e5e;
+}
+
+/* loading thoi gian chờ */
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+}
+
+.spinner-border {
+    width: 50px;
+    height: 50px;
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #FF6F91;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
