--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,7 +1,13 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
+
 * {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f3f3f3;
 }
 
 .loading-container {
