--- a/frontend/src/styles/ProductPage.css
+++ b/frontend/src/styles/ProductPage.css
@@ -349,3 +349,9 @@
         transform: rotate(360deg);
     }
 }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .sidebar-wrapper {
+        display: none !important;
+    }
+}
