--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -3,12 +3,21 @@
 * {
     margin: 0;
     padding: 0;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+
 
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f3f3f3;
+    font-size: 13px!important;
 }
+.container{
+    font-size: 13px;
+}
+.navbar {
+font-size: 13px;}
 
 .loading-container {
     position: fixed;
