--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -43,8 +43,8 @@ html {
     height: 32px;
     border-radius: 50%;
     background-color: #f5f5f5;
-    color: #666;
-    font-size: 14px;
+    color: #666!important;
+    font-size: 13px;
     transition: all 0.2s ease;
 }
 
@@ -63,3 +63,4 @@ html {
         height: 50px;
     }
 }
+
