--- a/frontend/src/components/header/styles.css
+++ b/frontend/src/components/header/styles.css
@@ -138,7 +138,7 @@
     font-weight: 400;
     font-style: normal;
     color: #FF6F91;
-    font-size: 25px;
+    font-size: 28px;
     padding-left: 20px
 }
 
@@ -150,5 +150,6 @@
     font-style: normal;
     justify-content: center;
     padding-left: 30px;
-    font-size: 20px;
+    font-size: 25px;
+    color: #fa3636;
 }
