--- a/frontend/src/components/header/styles.css
+++ b/frontend/src/components/header/styles.css
@@ -1,5 +1,6 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
-
+@import "swiper/css";
+@import 'swiper/css/pagination';
 .home__product {
     background-color: #ff85a1;
 
@@ -209,3 +210,41 @@
     background-color: #fff;
     padding: 10px;
 }
+
+
+
+
+body {
+    background: #eee;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #000;
+    margin: 0;
+    padding: 0;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+   
+}
+.swiper-pagination{
+    opacity: 0;
+}
+
